add batch update
